# lib-alfont

./: .gitignore  CMakeLists.txt
cmake/: FindAllegro.cmake
